ajout , formulaire popup formation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./src/index.css" rel="stylesheet">
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="bg-zinc-300">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
